# pytest-dbg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: deploy.yaml  lint.yaml  release.yaml  test.yaml  version.yaml
src/: plugin.py
tests/: test_dbg.py
