[project]
name = "pytest-dbg"
requires-python = ">=3.11,<3.14"
authors = [{name = "George Ogden"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["dependencies", "version"]


[project.entry-points.pytest11]
dbg = "plugin"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["version.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
